# Flags to CXX compiler
AM_CXXFLAGS = --pedantic -Wall
AM_LDFLAGS = 

bindir = $(output_dir)
bin_PROGRAMS = lwrace
lwrace_SOURCES = Button.cpp config.cpp Dollar.cpp Enemy.cpp Entity.cpp Filesystem.cpp FPS.cpp Game.cpp GameState.cpp GameState_Init.cpp \
				 Image.cpp KeySet.cpp Log.cpp main.cpp Player.cpp Rock.cpp Sprite.cpp Text.cpp



